# machine_learning_for_finance_public

./: LICENSE  README.md  justfile  pyproject.toml
labs/01_automated_trading/backtesting/: engine.py
labs/01_automated_trading/data/: generate_data.py  relationships.py  synthetic.py
labs/01_automated_trading/eda/: analysis.py
labs/01_automated_trading/features/: engineering.py
labs/01_automated_trading/notebooks/: 01_data_and_basic_model.ipynb  02_logistic_regression_and_thresholds.ipynb  03_overfitting_and_complex_models.ipynb  04_advanced_topics.ipynb  05_bonus_automl.ipynb
labs/02_models_and_tooling/notebooks/: 01_sklearn_classification_models.ipynb  02_tooling.ipynb  optuna_rf_f1.db
projects/ALFON_MARUENDA_STRACK/: README.md  requirements.txt
projects/ALFON_MARUENDA_STRACK/Code/: code_qrt.py
projects/ALFON_MARUENDA_STRACK/written_presentation/: report_qrt.html
projects/CHARDAIN_FAIVRE_ESTEVE/: .gitignore  README.md  requirements.txt
projects/CHARDAIN_FAIVRE_ESTEVE/code/: analysis.py  backtest.py  data_collection.py  features.py  main.py  merge.py  model.py
projects/CHARDAIN_FAIVRE_ESTEVE/written_presentation/: analysis.html  analysis.ipynb
projects/Ferlus_Monestier_Muhammad/: README (1).md  README.md  all_packages.txt  requirements.txt
projects/ZERBIB_TARLET_MAIRE_ABDELLAHI/code/: README.md  benchmark_submission.ipynb  requirements.txt  start.sh
projects/final presentation ML Fernandes Neres Komara Deilhes/: .gitignore  README.md  requirements.txt  verify.py  verify_files.py
projects/tseng_rubio_krief_fares/: README.md
(+70 files in other folders)
