[project]
name = "machine-learning-for-finance-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "scikit-learn>=1.6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "nbstripout>=0.6.0",
    "plotly>=5.0.0",
    "h2o>=3.46.0.9",
]
